--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - "8000:8000"
     volumes:
       - ./app:/app
-    command:
+    command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     environment:
       - DB_HOST=db
